--- a/MerlionPortal/MerlionPortal-war/web/wms/wmsindex.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/wmsindex.xhtml
@@ -46,7 +46,7 @@
                     <p:menuitem value="View Today's Stock Audits" url="viewduestockaudit.xhtml"/>
                 </p:submenu>
                  <p:submenu label="Warehourse Orders" styleClass="display:block" >
-                    <p:menuitem value="All Pending Orders" url="viewallpendingrequests"/>
+                    <p:menuitem value="All Pending Orders" url="viewallpendingrequests.xhtml"/>
                     <p:menuitem value="View Stock Audit Schedule" url="viewstockauditschedule.xhtml"/>
                 </p:submenu>
             </p:panelMenu>
