--- a/MerlionPortal/MerlionPortal-war/web/wms/orderfulfillment.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/orderfulfillment.xhtml
@@ -87,9 +87,55 @@
                             <p:ajax listener="#{orderFulfillManagedBean.onWarehouseZoneChange()}" update="storageBin" />
                             <f:selectItem itemLabel="Select WarehouseZone" itemValue="" noSelectionOption="true" />
                             <f:selectItems value="#{orderFulfillManagedBean.warehouseZones}" var="storageType" itemLabel="ID:#{storageType.warehouseZoneId}   Name:#{storageType.name}"  itemValue="#{storageType.name}" />
-                        </p:selectOneMenu>
-                        
+                        </p:selectOneMenu>                        
                     </h:panelGrid>
+                    <p:dataTable id="storageBin" var="storageBin" sortMode="multiple" value="#{orderFulfillManagedBean.storageBins}" 
+                             widgetVar="productsTable"
+                             selection="#{displayProductManagedBean.selectedProducts}"
+                             filteredValue="#{displayProductManagedBean.filteredProducts}"
+                             emptyMessage="No product found with given criteria"
+                             rowKey="#{product.productId}">
+
+                    <f:facet name="header">
+                        <p:outputPanel>
+                            <h:outputText value="Search all fields:" />
+                            <p:inputText id="globalFilter" onkeyup="PF('productsTable').filter()" />
+                        </p:outputPanel>
+                    </f:facet>
+                    <p:column selectionMode="multiple" style="text-align:center" width="40"/>
+                    <p:column  
+                        filterBy="#{product.productId}" 
+                        filterMatchMode="exact" headerText="SKU" >
+                        <h:outputText value="#{product.productId}" />
+                    </p:column>
+
+                    <p:column  filterBy="#{product.productName}" filterMatchMode="contains" headerText="Name Of Product">
+                        <h:outputText value="#{product.productName}" />
+                    </p:column>
+
+                    <p:column  filterBy="#{product.description}" filterMatchMode="contains" headerText="Description">
+                        <h:outputText value="#{product.description}" />
+                    </p:column>
+
+                    <p:column filterBy="#{product.category}" filterMatchMode="in" headerText="Category">
+                        <f:facet name="filter">
+                            <p:selectCheckboxMenu label="Select" 
+                                                  onchange="PF('productsTable').filter()" 
+                                                  panelStyle="width:150px" scrollHeight="150">
+                                <f:selectItems value="#{displayProductManagedBean.categories}"/>
+                            </p:selectCheckboxMenu>
+                        </f:facet>
+                        <h:outputText value="#{product.category}" />
+                    </p:column>
+
+                    <p:column headerText="Currency" >
+                        <h:outputText value="#{product.currency}" />
+                    </p:column>
+
+                    <p:column sortBy="#{product.price}" headerText="Price" >
+                        <h:outputText value="#{product.price}" />
+                    </p:column>
+                </p:dataTable>
                     <p:separator />
                     <p:commandButton value="Submit" action="#{orderFulfillManagedBean.reserveSpace()}" />
                 </p:panel>
